THRIFT-4531 (#1)

THRIFT-4531: Fix generated Python read() method for immutable structs with optional members.